# ndefender-observability

./: .gitignore  README.md  ROADMAP.md  progress.md  pyproject.toml
.github/workflows/: ci.yml
alerts/prometheus/: ndefender.rules.yml
config/: default.yaml  development.yaml
dashboards/grafana/: ndefender-overview.json
docs/: ALERTS.md  CONFIGURATION.md  DASHBOARDS.md  DEPLOYMENT_SYSTEMD.md  DIAGNOSTICS.md  HEALTH_MODEL.md  METRICS.md  OPERATIONS.md  PROM_GRAFANA_QUICKSTART.md  RELEASING.md  RUNBOOKS.md
src/ndefender_observability/: __init__.py  config.py  diagnostics.py  main.py  state.py  version.py
src/ndefender_observability.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/ndefender_observability/collectors/: 'aggregator_http.py'  aggregator_http.py  base.py  jsonl_tail.py  pi_stats.py  system_controller_http.py
src/ndefender_observability/health/: compute.py  model.py
src/ndefender_observability/metrics/: instruments.py  registry.py
src/ndefender_observability/utils/: http.py  ring.py  time.py
src/ndefender_observability/ws/: server.py
systemd/: ndefender-observability.service
tests/: test_aggregator_collector.py  test_config.py  test_diagnostics.py  test_health_model.py  test_jsonl_tail.py  test_metrics_exposition.py  test_system_controller_collector.py  test_version_config.py
tools/: dev_client.py  diag_bundle.py  make_release_notes.py  smoke_metrics.py
